--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
 }
 
 a:visited {
-	color: rgb(0, 0, 0);
+	color: rgb(255, 255, 255);
 }
 
 a:hover {
@@ -112,7 +112,7 @@ input {
 .size {
 	height: auto;
 	border-width: 20px;
-	border-color: orange;
+	border-color: white;
 }
 
 .size>img {
