--- a/css/style.css
+++ b/css/style.css
@@ -8,161 +8,37 @@
 	--main_width_2: 80%;
 }
 
-.container_left {
-	float: left;
-	width: var(--main_width_1);
-	min-height: 100vh;
-	color: aliceblue;
-	/*height: var(--main_height);*/
-	padding-left: 2%;
-	background-color: rgb(40, 153, 55);
-}
-
-.container_left>div {
-	display: grid;
-	background-color: #333;
-}
-
-.container_right {
-	display: grid;
-	grid-template-columns: var(--main_template_columns) var(--main_template_columns) var(--main_template_columns) var(--main_template_columns);
-	grid-template-rows: var(--main_template_rows) var(--main_template_rows) var(--main_template_rows) var(--main_template_rows);
-	float: left;
-	width: var(--main_width_2);
-	/*height: var(--main_height);*/
-	/*default*/
-	grid-gap: 5px;
-	padding: 5px;
-	background-color: lightblue;
-}
-
-.container_right_header {
-	float: left;
-	width: var(--main_width_2);
-	height: 10vh;
-	background-color: gray;
-}
-
-.container_right_big {
-	float: left;
-	width: var(--main_width_2);
-	max-width: var(--main_width_2);
-	min-height: 90vh;
-	background-color: rgb(255, 197, 125);
-}
-
-.container_right_big>div {
-	background-color: rgb(250, 154, 9);
-}
-
-/* .container_right>div {
-    display: grid;
-    grid-template-rows: auto auto;
-	width: auto;
-    height: 300px;
-    text-align: center;
-    background-color: red;
-} */
-
-.container_right>button {
-	display: grid;
-	grid-template-rows: auto auto;
-	width: auto;
-	font-size: 20px;
-	height: 300px;
-	text-align: center;
-	background-color: pink;
-}
-
-/* .container_right>div {
-	background-color: rgb(250, 154, 9);
-} */
-
-.row>img {
-	height: 30px;
-}
-
-a:visited {
-	color: rgb(255, 255, 255);
-}
-
-a:hover {
-	color: rgb(0, 0, 0);
-	text-decoration: none;
-}
-
-a:active {
-	color: white;
-}
-
-input {
-	float: left;
-	clear: both;
-}
+/* ####################################################################################################################
+####################################################################################################################
+####################################################################################################################
+####################################################################################################################
+#################################################################################################################### */
 
 .crop_img {
 	width: 200px;
 	height: 200px;
 }
 
-/* label {
-	font-size: 20px;
-} */
-
-.size {
-	height: auto;
-	border-width: 20px;
-	border-color: white;
+.row>img {
+	height: 30px;
 }
 
 .size>img {
 	height: 30px;
 }
 
-.text-left>img {
-	height: 30px;
+.size {
+	height: auto;
+	/* border-width: 10px; */
+	border-color: white;
 }
-
-/*
-  .grid_container_column {
-      display: grid;
-      float: left;
-      width: 16%;
-      height: 100%;
-          /*default
-          grid-gap: 1%;
-          padding: 1%;
-  }
-
-  .grid_container_column_content{
-      line-height: 50px;
-  }
-
-  .grid_container_row {
-      display: grid;
-      /*grid-template-columns: 270px 270px 270px 270px;
-      grid-template-columns: auto auto auto auto;
-      float: center;
-      width: 84%;
-          /*default
-          grid-gap: 1%;
-          padding: 1%;
-  }
-  .grid_container_row > div {
-      text-align: center;
-      grid-gap: 10px;
-      font-size: 30px;
-      width: 270px;
-      height: 300px;
-  }
-  */
 
 header {
 	background-color: rgb(34, 168, 52);
 }
 
 h1 {
-	font-family: "Raleway", sans-serif
+	font-family: "Raleway", sans-serif;
 }
 
 label {
@@ -175,13 +51,43 @@ body, html {
 	height: 100%
 }
 
-/* Checking */
+.colora {
+	background-color: #7C0000;
+	color: white;
+	text-decoration: none;
+	font-size: 20px;
+}
 
-/*
-  div {
-      background-color: white;
-  }
-  */
+.footer {
+	font-family: Arial;
+	text-align: center;
+	background: #333;
+	color: #f2f2f2;
+	font-size: 11px;
+	letter-spacing: 3px;
+	/*position: absolute;*/
+	width: 100%;
+	float: left;
+	/*top: var(--main_height);*/
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+/* mygroub */
+
+table, tr, td {
+	/*border: 5px ;
+  border-style: outset;*/
+	text-align: center;
+}
+
+.notice {
+	font-family: Arial;
+	color: black;
+	font-size: 25px;
+}
+
+/* #################################################################################################################### */
 
 ::-webkit-scrollbar {
 	width: 10px;
@@ -205,54 +111,141 @@ body, html {
 	background: #555;
 }
 
-.colora {
-	background-color: #7C0000;
-	color: white;
+a:visited {
+	color: rgb(255, 255, 255);
+}
+
+a:hover {
+	color: rgb(0, 0, 0);
 	text-decoration: none;
-	font-size: 20px;
 }
 
-h1 {
-	color: red;
+a:active {
+	color: rgb(0, 0, 0);
 }
 
-.footer {
-	font-family: Arial;
-	text-align: center;
-	background: #333;
-	color: #f2f2f2;
-	font-size: 11px;
-	letter-spacing: 3px;
-	/*position: absolute;*/
-	width: 100%;
+/* ####################################################################################################################
+####################################################################################################################
+####################################################################################################################
+####################################################################################################################
+#################################################################################################################### */
+
+/* grid-gap: 1%; */
+
+/* padding: 1%; */
+
+/* .grid_container_column {
+	display: grid;
 	float: left;
-	/*top: var(--main_height);*/
-	padding-top: 10px;
-	padding-bottom: 20px;
-}
-/*mygroub*/
-.h_table{
-	background-color: #7C0000;
-	font-weight:bold;
+	width: 16%;
+	height: 100%;
+} */
+
+/* .grid_container_column_content {
+	line-height: 50px;
+} */
+
+/* grid-gap: 1%; */
+
+/* padding: 1%; */
+
+/* .grid_container_row {
+	display: grid;
+	grid-template-columns: 270px 270px 270px 270px;
+	grid-template-columns: auto auto auto auto;
+	float: center;
+	width: 84%;
+} */
+
+/* .grid_container_row>div {
+	text-align: center;
+	grid-gap: 10px;
+	font-size: 30px;
+	width: 270px;
+	height: 300px;
+} */
+
+/*height: var(--main_height);*/
+
+/* .container_left {
+	float: left;
+	width: var(--main_width_1);
+	min-height: 100vh;
+	color: aliceblue;
+	padding-left: 2%;
+	background-color: rgb(40, 153, 55);
+} */
+
+/* .container_left>div {
+	display: grid;
+	background-color: #333;
+} */
+
+/*height: var(--main_height);*/
+
+/* .container_right {
+	display: grid;
+	grid-template-columns: var(--main_template_columns) var(--main_template_columns) var(--main_template_columns) var(--main_template_columns);
+	grid-template-rows: var(--main_template_rows) var(--main_template_rows) var(--main_template_rows) var(--main_template_rows);
+	float: left;
+	width: var(--main_width_2);
+	grid-gap: 5px;
+	padding: 5px;
+	background-color: lightblue;
+} */
+
+/* .container_right_header {
+	float: left;
+	width: var(--main_width_2);
+	height: 10vh;
+	background-color: gray;
+} */
+
+/* .container_right_big {
+	float: left;
+	width: var(--main_width_2);
+	max-width: var(--main_width_2);
+	min-height: 90vh;
+	background-color: rgb(255, 197, 125);
+} */
+
+/* .container_right_big>div {
+	background-color: rgb(250, 154, 9);
+} */
+
+/* .container_right>div {
+    display: grid;
+    grid-template-rows: auto auto;
+	width: auto;
+    height: 300px;
+    text-align: center;
+    background-color: red;
+} */
+
+/* .container_right>button {
+	display: grid;
+	grid-template-rows: auto auto;
+	width: auto;
 	font-size: 20px;
-	color: white;
-	width: 170px;
+	height: 300px;
+	text-align: center;
+	background-color: pink;
+} */
 
+/* .container_right>div {
+	background-color: rgb(250, 154, 9);
+} */
 
-}
-.positionin{
+/* input {
+	float: left;
+	clear: both;
+} */
+
+/* .text-left>img {
+	height: 30px;
+} */
+
+/* .positionin {
 	margin-top: 50px;
 	margin-left: 50px;
-
-}
-
-table ,tr,td{
-  /*border: 5px ;
-  border-style: outset;*/
-  text-align: center;
-}
-.news {
-	font-family: Arial;
-	color: black;
-	font-size: 30px;
-}
+} */
